Revision history for Bot-BasicBot-Pluggable-Module-Notify
=========================================================

0.04    2015-12-06
        - fixed missing prerequisite (MIME::Lite).

0.03    2015-05-02
        - fixed prerequisite name.

0.02    2015-05-01
        - fixed time calculations.
        - fixed @here user list.

0.01    2015-04-29
        - original release;